Testing how to make dynamic links that automatically points to correct URL.

--- a/webtest/src/main/java/se/marza/swf/web/pages/OtherPage.html
+++ b/webtest/src/main/java/se/marza/swf/web/pages/OtherPage.html
@@ -10,7 +10,7 @@
 
 		<h1>Other</h1>
 
-		<p><a href="/webtest">Back to index</a></p>
+		<p><a swf:id="index-link" href="/dunno">Back to index</a></p>
 
 	</body>
 
