--- a/webtest/src/main/java/se/marza/swf/web/pages/Test404Page.html
+++ b/webtest/src/main/java/se/marza/swf/web/pages/Test404Page.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>404 - Not found</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  </head>
-  <body>
-		<div>404 - Not found</div>
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="imagetoolbar" content="no" />
+		<title>404</title>
+	</head>
+
+	<body>
+
+		<h1>404</h1>
+
+	</body>
+
 </html>
