--- a/webtest/src/main/java/se/marza/swf/web/pages/ErrorPage.html
+++ b/webtest/src/main/java/se/marza/swf/web/pages/ErrorPage.html
@@ -3,14 +3,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="imagetoolbar" content="no" />
-		<title>SWF Other</title>
+		<title>Error</title>
 	</head>
 
 	<body>
 
-		<h1>Other</h1>
-
-		<p><a id="index-link" href="/dunno">Back to index</a></p>
+		<h1>Error</h1>
 
 	</body>
 
