dummy links in markup

--- a/webtest/src/main/java/se/marza/swf/web/pages/OtherPage.html
+++ b/webtest/src/main/java/se/marza/swf/web/pages/OtherPage.html
@@ -10,7 +10,7 @@
 
 		<h1>Other</h1>
 
-		<p><a id="index-link" href="/dunno">Back to index</a></p>
+		<p><a id="index-link" href="dummy">Back to index</a></p>
 
 	</body>
 
