Revert 7aed83a110f20924a00e2792551b4dc8cf054e92^..HEAD

--- a/webtest/src/main/java/se/marza/swf/web/pages/IndexPage.html
+++ b/webtest/src/main/java/se/marza/swf/web/pages/IndexPage.html
@@ -10,7 +10,7 @@
 
 		<h1>Index</h1>
 
-		<p><a id="other-link" href="dummy">Other</a></p>
+		<p><a id="other-link" href="other">Other</a></p>
 
 	</body>
 
